# krakenite

./: CMakeLists.txt  Dockerfile  KrakenAssignment.cpp  KrakenAssignment.sln  KrakenAssignment.vcxproj  LICENSE  README.md  client.cpp  client.h  filestream.h  kraken.sln  krakenite.vcxproj  krakenite.vcxproj.filters  logpub.h  main.cpp  netio.h  order.h  orderbook.h  proto.h  server.cpp  server.h  test.cpp  test.h  tob.h  types.h  user.h  util.h
etc/: input.csv  output.csv
include/: client.h  filestream.h  history.h  logpub.h  netio.h  orderbook.h  proto.h  server.h  test.h  tob.h  types.h  user.h  util.h
src/: client.cpp  main.cpp  server.cpp  test.cpp
